--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.6.5",
     "mdb-vue-ui-kit": "^1.1.0",
     "register-service-worker": "^1.7.1",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
