--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mdb-vue-ui-kit": "^1.1.0",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.11"
+    "vue-router": "^4.0.11",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
