--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "json-server": "^0.16.3",
     "vue-cli-plugin-mdb5": "~1.2.0"
   },
   "eslintConfig": {
