--- a/package.json
+++ b/package.json
@@ -8,6 +8,21 @@
     "lint": "vue-cli-service lint",
     "start": "vue-cli-service serve --open"
   },
+  "vue": {
+    "pwa": {
+      "name": "Alloro",
+      "themeColor": "#3385B4",
+      "msTileColor": "#3385B4",
+      "appleMobileWebAppCapable": "yes",
+      "appleMobileWebAppStatusBarStyle": "#3385B4",
+      "iconPaths": {
+        "favicon32": "./img/icons/favicon-32x32.png",
+        "favicon16": "./img/icons/favicon-16x16.png",
+        "appleTouchIcon": "./img/icons/apple-touch-icon-152x152.png",
+        "msTitleImage": "./img/icons/msapplication-icon-144x144.png"
+      }
+    }
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
